Page selection fixes, starting text tool, starting labels.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html id="html">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" id="html">
 <head>
 <title>fluidIA: stage</title>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -26,8 +26,8 @@
 		<a href="#" onclick="toolSelect();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_arrow_off.gif" border="0" id="iconSelect" title="Selection"></a><br>
 		<a href="#" onclick="toolObject();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_object_off.gif" border="0" id="iconObject" title="Object"></a><br>
 		<a href="#" onclick="toolText();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_text_off.gif" border="0" id="iconText" title="Text"></a><br>
-		<a href="#" onclick="toolElement();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_element_off.gif" border="0" id="iconElement" title="Element"></a><br>
-		<a href="#" onclick="toolHotspot();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_hotspot_off.gif" border="0" id="iconHotspot" title="Hotspot"></a><br>
+		<!--<a href="#" onclick="toolElement();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_element_off.gif" border="0" id="iconElement" title="Element"></a><br>-->
+		<!--<a href="#" onclick="toolHotspot();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_hotspot_off.gif" border="0" id="iconHotspot" title="Hotspot"></a><br>-->
 	</div>
 
 	<div id="rightpanel">
