--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <title>fluidIA: stage</title>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <link href="engine/css/base.css" rel="stylesheet" type="text/css">
-<script src="engine/js/jquery-1.2.6.min.js" content="text/javascript"></script>
-<script src="engine/js/jquery.json-1.1.min.js" content="text/javascript"></script>
-<script src="engine/js/ui.core.js" content="text/javascript"></script>
-<script src="engine/js/ui.draggable.js" content="text/javascript"></script>
-<script src="engine/js/ui.resizable.js" content="text/javascript"></script>
+<link type="text/css" href="engine/css/themes/base/ui.all.css" rel="stylesheet" />
+<script src="engine/js/jquery-1.3.2.min.js" content="text/javascript"></script>
+<script src="engine/js/jquery.json-1.3.min.js" content="text/javascript"></script>
+<script src="engine/js/jquery-ui-1.7.custom.min.js" content="text/javascript"></script>
 <script src="engine/js/jquery.hotkeys.js" content="text/javascript"></script>
 <script src="engine/js/jquery.mousewheel.min.js" type="text/javascript"></script>
 <script src="engine/js/jquery.scrollTo-min.js" type="text/javascript"></script>
-<script src="engine/js/jquery.inc-5.pack.js" type="text/javascript"></script>
 <script src="engine/js/base_jquery.js" content="text/javascript"></script>
 <link rel="shortcut icon" type="image/ico" href="/engine/images/favicon4.ico" />
 </head>
@@ -137,8 +135,6 @@
 	
 
 </div>
-
-
 
 
 <!-- HIDDEN DIVS -->
