--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 			<tr>
 				<td rowspan="2">
 					<div class="fTsmall fSMTitle1">Selected State:
+					<a href="#" style="" onclick="fStateManager.editAllStates();" onmouseover="rollOver(this); fStateManager.hoverOn('all');" onmouseout="rollOut(this); fStateManager.hoverOff();"><img src="engine/images/b_editall_off.png" border="0" title="Edit All" id="editAll"></a><br>
 					<span class="fT9 fSMStarting">Starting State:</span>	
 				</div>
 				</td>
@@ -151,7 +152,7 @@
 			</tr>
 			<tr>
 				<td valign="top" height="55" class="fSMStates"></td>
-				<td valign="top">
+				<td valign="top" width="35">
 					<div class="fSMArrows">
 						<a href="#" style="" onclick="fStateManager.addState();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconAdd_off.png" border="0" title="Add"></a><br>
 						<a href="#" style="" onclick="fStateManager.removeState();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconRemove_off.png" border="0" title="Remove"></a>
@@ -166,29 +167,75 @@
 
 
 
-<div id="fAltManager">
+<div id="fIdeaManager">
 	<div class="fTThick">ideas</div>
-	<div id="fSMLeft"></div>
-	<div id="fSMCore">
-		<div class="fT12 fTI" id="fCBTitle">ADD ALTERNATIVE + + +</div><br>
-		<a href="#" style="" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconAdd_off.png" border="0" title="Add"></a><br>
+	<div id="fIMTop"></div>
+	<div id="fIMCore">
+		<div class="fIMHeader fT9 fTBlue">Best Idea:</div>
+		<div class="fTsmall" id="fIdeaTitle">Idea: <span id="fIdeaNumber">1</span></div><br><br>
+		<div class="fIMIdeas"></div>
+		<div class="fIMArrows">
+			<a href="#" style="" onclick="fIdeaManager.addIdea();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconAdd_off.png" border="0" title="Add"></a>
+			<a href="#" style="" onclick="fIdeaManager.removeIdea();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconRemove_off.png" border="0" title="Remove"></a>
+		</div>
 	</div>
-	<div id="fSMRight"></div>
+	<div id="fIMBottom"></div>
 </div>
 
 
 
 <div id="fCBManager">
 	<div class="fTThick">clipboard</div>
-	<div id="fCBTop"></div>
+	<div class="fCBTop"></div>
 	
-	<div id="fCBCore">
-		<div class="fTsmall">Clipboard contains:</div>
-		<div class="fT12 fTI" id="fCBTitle"></div><br>
-		<br>
+	<div class="fCBCore">
+		<div class="fTsmall">Contains:</div>
+		
+		<div class="fCBContents" id="CBText">
+			<br>
+			<div class="fT12 fTI">Text</div>
+		</div>
+		
+		<div class="fCBContents" id="CBPage">
+			<br>
+			<div class="fT12 fTI">Page</div>
+		</div>
+
+		<div class="fCBContents" id="CBInstance">
+			<br>
+			<div class="fT12 fTI fTBlue" id="fCBTitle"></div>
+		</div>
+
+		<div class="fCBContents" id="CBEmpty">
+			<div class="fTThickDrk" style="padding: 0 20px 20px 20px;">quite empty in here :(</div>
+			<br>
+			<br>
+			<div class="fT18" style="bottom: 0px; left: 0px; position: absolute; padding: 30px; text-align: center;">CTRL C<br><span class="fT9 fTDim">to copy</span></div>
+			<div class="fT18" style="bottom: 0px; right: 0px; position: absolute; padding: 30px; text-align: center;">CTRL V<br><span class="fT9 fTDim">to paste</span></div>
+		</div>
 		
 	</div>
-	<div id="fCBBottom"></div>
+	<div class="fCBBottom"></div>
+</div>
+
+<div id="fPManager">
+	<div class="fTThick">paste as <span id="fPasteMode">master</span></div>
+	<div class="fCBTop"></div>
+	
+	<div class="fCBCorePaste">
+		
+		<a href="#" onclick="fCBManager.pasteAsMaster();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/b_newma_off.png" border="0" id="buttonNewMaster" title="Master"></a>
+		<a href="#" onclick="fCBManager.pasteAsInstance();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/b_newin_off.png" border="0" id="buttonNewInstance" title="Instance"></a>
+		<div id="fCBInto" class="fT9"><span id="fCBInto1">All States of</span> <span id="fCBInto2" class="fT9 fTOrange">Instance 3</span></div>
+		<div>
+			<a href="#" onclick="fCBManager.paste();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/b_paste_off.png" border="0" id="buttonPaste" title="Paste"></a>
+			<div class="fT9 fTDim" style="padding-top: 3px;">or PRESS CTRL+V again</div>
+		
+		
+		</div>
+		
+	</div>
+	<div class="fCBBottom"></div>
 </div>
 
 
