Instance viewer implementation

--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
 				<div class="fFRight"></div>
 			</div>
 			
+			<div class="fFInstItem">
+				<div class="fFInstTop"></div>
+				<div class="fFInstCore">
+					<div class="fTsmall" id="fFInstTitle">All Instances:</div>
+					<div id="fFInstItems">
+						
+					</div>
+				</div>
+			</div>
+			
 		</div> 
 		
 
@@ -144,7 +154,7 @@
 			<tr>
 				<td rowspan="2">
 					<div class="fTsmall fSMTitle1">Selected State:
-					<a href="#" style="" onclick="fStateManager.editAllStates();" onmouseover="rollOver(this); fStateManager.hoverOn('all');" onmouseout="rollOut(this); fStateManager.hoverOff();"><img src="engine/images/b_editall_off.png" border="0" title="Edit All" id="editAll"></a><br>
+					<a href="#" style="" onclick="fStateManager.editAllStates();" onmouseover="rollOver(this); fStateManager.hoverOn('all');" onmouseout="rollOut(this); fStateManager.hoverOff();"><img src="engine/images/b_editAll_off.png" border="0" title="Edit All" id="editAll"></a><br>
 					<span class="fT9 fSMStarting">Starting State:</span>	
 				</div>
 				</td>
