jsonToText & loading fix

--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
 		<a href="#" onclick="toolObject();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_object_off.gif" border="0" id="iconObject" title="Object"></a><br>
 		<a href="#" onclick="toolText();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_text_off.gif" border="0" id="iconText" title="Text"></a><br>
 		<a href="#" onclick="toolForm();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_form_off.gif" border="0" id="iconForm" title="Form"></a><br>
-		<!--<a href="#" onclick="toolElement();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_element_off.gif" border="0" id="iconElement" title="Element"></a><br>-->
-		<!--<a href="#" onclick="toolHotspot();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/button_hotspot_off.gif" border="0" id="iconHotspot" title="Hotspot"></a><br>-->
 	</div>
 
 	<div id="rightpanel">
@@ -92,7 +90,7 @@
 						<div id="fSPriority">
 							<div class="fSCheck" onclick="fStates.fSCheckToggle('fSPriority')"></div>
 							<div class="fSTitle fT11"  onclick="fStates.fSCheckToggle('fSPriority')">Priority</div>
-							<div class="fSText fTDim" align="left" ">PRESS 1-5</div>
+							<div class="fSText fTDim" align="left">PRESS 1-5</div>
 						</div>
 					</div>
 					
