Refactoring; AutoType Text; Retractable Footer; Bugfix: undefined text;

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
 	</div>
 
 	<div id="rightpanel">
-		<div id="panelPages" class="panel">
+		<div id="fPanelPages" class="panel">
 			<div class="panelTitle">Pages</div>
 			<div class="panelArrowUp"></div>
 			<div class="fPanelItemsList"></div>
 			<div class="panelArrowDown"></div>
 			<div class="panelIcons">
-				<a href="#" onclick="panelPages.add();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconAdd_off.png" border="0" id="buttonIconAdd" title="Add"></a><a href="#" onclick="panelPages.remove();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconRemove_off.png" border="0" id="buttonIconRemove" title="Remove"></a><!--<a href="#" onclick="toolPanelPagesDuplicate();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconDuplicate_off.png" border="0" id="buttonIconDuplicate" title="Duplicate"></a>-->
+				<a href="#" onclick="fPanelPages.add();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconAdd_off.png" border="0" id="buttonIconAdd" title="Add"></a><a href="#" onclick="fPanelPages.remove();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconRemove_off.png" border="0" id="buttonIconRemove" title="Remove"></a><!--<a href="#" onclick="toolPanelPagesDuplicate();" onmouseover="rollOver(this);" onmouseout="rollOut(this);"><img src="engine/images/buttonIconDuplicate_off.png" border="0" id="buttonIconDuplicate" title="Duplicate"></a>-->
 			</div>
 		</div>
 	</div>
 
 
 	<div id="footer">
+		
+		<div id="footerAll" style="bottom: 0px; position: absolute; width: 100%; height: 100px;">
 		
 		<div id="fObjInstHolder" class="fEditingObj">
 			
@@ -130,10 +132,12 @@
 		</div>
 		
 
-		
+		</div>
 		
 		<div id="cbMini">
 		</div>
+		
+		
 
 	</div>
 	
