Minor editable field fix

--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
 		<a href="#" style="opacity: 0.1;"><img src="engine/images/b_login_off.png" class="hButton" border="0" style="padding-right: 95px;" title="Login"></a>
 		</div>
 		<div>
-			<span class="fTThick2">login</span><br>
+			<span class="fTThick2" id="fLoginHeader">login</span><br>
 			<input type="text" name="login" id="fInLogin" class="fT9 fInput fNoHotKey" style="width: 95px; margin-top: 3px;" value="email"><br>
 			<input type="text" name="password" id="fInPassword" class="fT9 fInput fNoHotKey" style="width: 95px; margin-top: 3px;" value="password"><br>
 			<a href="#" onmouseover="rollOver(this);" onmouseout="rollOut(this);" id="fBLogin"><img src="engine/images/b_ok_off.png" border="0" title="Ok" style="display: block; margin: 3px 0 0 -2px;"></a>
-			<br>
-			<span class="fT11">or <a href="" class="fFooterLink">register</a></span><br>
+			
 		</div>
 	</div>
 	<div class="fSLBottom"></div>
